<?xml version="1.0" encoding="utf-8"?>
<!--
  MedPharm ERP - Medical & Pharmaceutical Management System
  Copyright (C) 2026 Enlightec Ltd. (www.enlightec.com)
  Author: Robert Andrew Stillwell
  Email: Andrew.Stillwell@enlightec.com

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_prescriptions"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_prescriptions" />

    <item
        android:id="@+id/nav_billing"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_billing" />

    <item
        android:id="@+id/nav_appointments"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_appointments" />

    <item
        android:id="@+id/nav_records"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_records" />

    <item
        android:id="@+id/nav_messages"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_messages" />

</menu>
